# stm32l052

./: Cargo.toml  STM32L0x2.svd
src/: lib.rs
src/rcc/apb1rstr/: mod.rs
src/rcc/apb2rstr/: mod.rs
